[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
#replace_package_name_marker
name = "dspy"
#replace_package_version_marker
version = "2.5.43"
description = "DSPy"
readme = "README.md"
authors = [{ name = "Omar Khattab", email = "okhattab@stanford.edu" }]
license = { text = "MIT License" }
requires-python = ">=3.9, <3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3", # removed 3.8
    "Programming Language :: Python :: 3.9",
]
# We have both project and tool.poetry.dependencies. Should we remove one?
# tool.poetry.dependencies is a convenience thing for poetry users.
# project dependencies function similarly to requirements.txt,
# `pip install .` will pull from pyproject.toml dependencies
dependencies = [
    "backoff",
    "joblib~=1.3",
    "openai",
    "pandas",
    "regex",
    "ujson",
    "tqdm",
    "datasets>=2.14.6,<3.0.0",
    "requests",
    "optuna",
    "pydantic~=2.0",
    "jinja2",
    "magicattr~=0.1.6",
    "litellm==1.55.3",
    "diskcache",
    "json-repair",
    "tenacity>=8.2.3",
    "anyio",
    "asyncer==0.0.8",
    "cachetools",
    "cloudpickle",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.18.0,<1.0.0"]
chromadb = ["chromadb~=0.4.14"]
lancedb = ["lancedb>=0.11.0"]
qdrant = ["qdrant-client>=1.11.1", "fastembed>=0.2.0"]
marqo = ["marqo"]
epsilla = ["pyepsilla~=0.3.7"]
pinecone = ["pinecone-client~=2.2.4"]
weaviate = ["weaviate-client~=4.5.4"]
milvus = ["pymilvus~=2.3.7"]
aws = ["boto3~=1.34.78"]
docs = [
    "sphinx>=4.3.0",
    "furo>=2023.3.27",
    "docutils<0.17",
    "m2r2",
    "myst-parser",
    "myst-nb",
    "sphinx-autobuild",
    "sphinx_rtd_theme",
    "autodoc_pydantic",
    "sphinx-reredirects>=0.1.2",
    "sphinx-automodapi==0.16.0",
]
dev = ["pytest>=6.2.5"]
fastembed = ["fastembed>=0.2.0"]

[project.urls]
homepage = "https://github.com/stanfordnlp/dspy"

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
    "*/test_*.py",
    "*/tests/*.py",
    "*/conftest.py",
    "*/venv/*",
    "*/virtualenv/*",
    "*/.venv/*",
    "*/.virtualenv/*",
    "*/env/*",
    "*/.env/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "logger",
    "try",
    "except",
    "^\\s*self\\.\\w+(:\\s*[^=]+)?\\s*=.*$",
    "continue",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Select a minimal set of rules
select = [
    "F", # Pyflakes
    "E", # Pycodestyle
    "TID252",  # Absolute imports
]
ignore = [
    "E501", # Line too long

]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = false
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"**/{tests,testing,docs}/*" = ["ALL"]
"**__init__.py" = ["ALL"]
